signup, login, logout, profile + image-profile

--- a/clinic_app/templates/nav.html
+++ b/clinic_app/templates/nav.html
@@ -18,6 +18,37 @@
             Home
           </a>
         </li>
+          {% if current_user.is_authenticated %}
+        <li>
+        <a href="{{ url_for('profile') }}"
+           class="block py-2 pr-4 pl-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 dark:text-white" aria-current="page">
+           Profile
+        </a>
+        </li>
+          {% endif %}
+          {% if not current_user.is_authenticated %}
+        <li>
+           <a href="{{ url_for('auth.login') }}"
+              class="block py-2 pr-4 pl-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 dark:text-white" aria-current="page">
+              Login
+           </a>
+        </li>
+        <li>
+            <a href="{{ url_for('auth.signup') }}"
+               class="block py-2 pr-4 pl-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 dark:text-white" aria-current="page">
+               Sign Up
+            </a>
+        </li>
+          {% endif %}
+          {% if current_user.is_authenticated %}
+        <li>
+            <a href="{{ url_for('auth.logout') }}"
+               class="block py-2 pr-4 pl-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 dark:text-white" aria-current="page">
+               Logout
+            </a>
+        </li>
+           {% endif %}
+
         <li>
           <a href="#"
              class="block py-2 pr-4 pl-3 text-gray-700 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">
@@ -44,6 +75,7 @@
             Contact
           </a>
         </li>
+
       </ul>
     </div>
   </div>
