--- a/clinic_app/templates/index.html
+++ b/clinic_app/templates/index.html
@@ -21,7 +21,7 @@
 {% for spec in specialty %}
     <a
         class="text-gray-900 bg-gradient-to-r from-lime-200 via-lime-400 to-lime-500 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-lime-300 dark:focus:ring-lime-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2"
-        href="#"
+        href="{{ url_for('get_doctors', title=spec.title )}}"
     > {{ spec.title}}:{{ spec.family}}</a>
 {% endfor %}
 </div>
