--- a/clinic_app/templates/patient_detail.html
+++ b/clinic_app/templates/patient_detail.html
@@ -22,7 +22,7 @@
     <h1 class="font-bold text-2xl">Все приемы:</h1>
     <div class="information w-full py-6 px-6 lg:p-6">
     {% for appointment in appointments %}
-        <li>{{ appointment }}&#x20bd;</li>
+        <li>{{ appointment }}</li>
     {% endfor %}
     </div>
 
