--- a/clinic_app/templates/doctor_detail.html
+++ b/clinic_app/templates/doctor_detail.html
@@ -28,7 +28,7 @@
 
     <br>
     <hr>
-    <h1 class="font-bold text-2xl">Все отзывы:</h1>
+    <h1 class="font-bold text-2xl">Все отзывы для меня:</h1>
     <div class="information w-full py-6 px-6 lg:p-6">
     {% for comm in comments %}
         <li>{{ comm }}</li>
