--- a/clinic_app/templates/doctors_Q.html
+++ b/clinic_app/templates/doctors_Q.html
@@ -8,7 +8,7 @@
         <div class="text-slate-700 leading-snug">
             <h2 class="font-bold">Все специалисты</h2>
                 {% for doctor in doctors %}
-                <p><a href="{{ url_for('doctor_detail', id=doctor[0].id)}}" class="text-purple-800">
+                <p><a href="{{ url_for('get_doctors', title=doctor[1].title)}}" class="text-purple-800">
                     {{ doctor[0].family }} - {{ doctor[1].title }}</a></p>
                 {% endfor %}
         </div>
