--- a/clinic_app/templates/index.html
+++ b/clinic_app/templates/index.html
@@ -21,16 +21,24 @@
 {% for spec in specialty %}
     <a
         class="text-gray-900 bg-gradient-to-r from-lime-200 via-lime-400 to-lime-500 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-lime-300 dark:focus:ring-lime-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2"
-        href="{{ url_for('get_doctors', title=spec.title )}}"
-    > {{ spec.title}}:{{ spec.family}}</a>
+        href="{{ url_for('doctors_spec', title=spec) }}"
+    > {{ spec }}</a>
 {% endfor %}
 </div>
 <div class="text-green-500">
     <ul class="mt-6 w-88 text-sm font-medium text-gray-900 bg-white rounded-lg border border-gray-200 dark:bg-gray-700 dark:border-gray-600 dark:text-white">
     {% for appoint in records %}
-        <li class="py-2 px-4 w-full border-b border-gray-200 dark:border-gray-600"><a href="#">Код приема: {{ appoint.id }} | Дата: {{ appoint.data }}| Время: {{ appoint.time}} | Фамилия врача: {{ appoint.doctor }}  | {% if appoint.patient  %} Фамилия пациент: {{ appoint.patient }} {% else %} свободно {% endif %} | </a></li>
+        <li class="py-2 px-4 w-full border-b border-gray-200 dark:border-gray-600">
+            <a href="#">
+                Код приема: {{ appoint.id }} | Дата: {{ appoint.data }}| Время: {{ appoint.time}} | Фамилия врача: {{ appoint.doctor }}  | {% if appoint.patient  %} Фамилия пациент: {{ appoint.patient }} {% else %} свободно {% endif %} | </a></li>
     {% endfor %}
     </ul>
 </div>
 
+Количество приемов-клиентов по каждому врачу
+<ul>
+{% for client in client_count%}
+    <li>{{ client[0].family }} {{ client[0].name}} {{ client[0].patronymic }}, "{{ client[1].title }}", Количество приемов: {{ client[2] }}</li>
+{% endfor %}
+</ul>
 {% endblock %}
