--- a/clinic_app/templates/nav.html
+++ b/clinic_app/templates/nav.html
@@ -50,15 +50,15 @@
            {% endif %}
 
         <li>
-          <a href="#"
+          <a href="{{ url_for('index_doctors')}}"
              class="block py-2 pr-4 pl-3 text-gray-700 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">
-            About
+            Доктора
           </a>
         </li>
         <li>
-          <a href="#"
+          <a href="{{ url_for('index_patients') }}"
              class="block py-2 pr-4 pl-3 text-gray-700 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">
-            Посты
+            Пациенты
           </a>
         </li>
         <li>
