--- a/clinic_app/templates/patient_detail.html
+++ b/clinic_app/templates/patient_detail.html
@@ -12,7 +12,7 @@
                             <p class="font-bold text-xl">{{ patient.patronymic }}</p>
                             <p class="text-xl">дата рождения: {{ patient.date_of_birth }},
                             <p class="text-xl">тел.:{{ patient.phone }},
-                            <p class="text-xl">адресс: {{ patient.address }}
+                            <p class="text-xl">адресс: {{ patient.address }}</p>
                             <p class="text-xl">Полных лет: {{ patient.get_age }}
              </div>
         </div>
@@ -28,7 +28,7 @@
 
     <br>
     <hr>
-    <h1 class="font-bold text-2xl">Все отзывы:</h1>
+    <h1 class="font-bold text-2xl">Все отзывы написанные мной:</h1>
     <div class="information w-full py-6 px-6 lg:p-6">
     {% for comm in comments %}
         <li>{{ comm }}</li>
