--- a/clinic_app/templates/doctor_detail.html
+++ b/clinic_app/templates/doctor_detail.html
@@ -10,8 +10,9 @@
                     <h1 class="font-bold text-2xl">{{ doctor.family }}</h1>
                             <p class="font-bold text-xl">{{ doctor.name }}</p>
                             <p class="font-bold text-xl">{{ doctor.patronymic }}</p>
-                            <p class="text-xl">Кабинет: {{ doctor.cabinet_id }},
-                            <p class="text-xl">Специальность.:{{ doctor.specialty_id }},
+                            <p class="text-xl">Клиника: {{ doctor.clinic99 }}
+                            <p class="text-xl">Кабинет: {{ doctor.cabinet }}
+                            <p class="text-xl">Специальность: {{ doctor.specialty }}
                             <p class="text-xl">Тариф: {{ doctor.admission_cost }}
                             <p class="text-xl">Процент отчисления: {{ doctor.deduction_percentage }}
              </div>
