--- a/clinic_app/templates/nav.html
+++ b/clinic_app/templates/nav.html
@@ -48,6 +48,12 @@
             </a>
         </li>
            {% endif %}
+        <li>
+          <a href="{{ url_for('index_clinics') }}"
+             class="block py-2 pr-4 pl-3 text-gray-700 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">
+            Клиники
+          </a>
+        </li>
 
         <li>
           <a href="{{ url_for('index_doctors')}}"
@@ -61,6 +67,12 @@
             Пациенты
           </a>
         </li>
+          <li>
+          <a href="{{ url_for('index_comments')}}"
+             class="block py-2 pr-4 pl-3 text-gray-700 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">
+            Комментарии
+          </a>
+        </li>
         <li>
          {# {% if current_user.has_role('admin') %} #}
           <a href="/admin"
@@ -69,13 +81,6 @@
           </a>
           {# {% endif %} #}
         </li>
-        <li>
-          <a href="#"
-             class="block py-2 pr-4 pl-3 text-gray-700 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">
-            Contact
-          </a>
-        </li>
-
       </ul>
     </div>
   </div>
