--- a/clinic_app/templates/doctors.html
+++ b/clinic_app/templates/doctors.html
@@ -8,8 +8,8 @@
         <div class="text-slate-700 leading-snug">
             <h2 class="font-bold">Все специалисты</h2>
                 {% for doctor in doctors %}
-                <p><a href="{{ url_for('doctor_detail', id=doctor[0].id)}}" class="text-purple-800">
-                    {{ doctor[0].family }} - {{ doctor[1].title }}</a></p>
+                <p><a href="{{ url_for('doctor_detail', id=doctor.id)}}" class="text-purple-800">
+                    {{ doctor.family }} - {{ doctor.specialty }}</a></p>
                 {% endfor %}
         </div>
 </div>
