--- a/clinic_app/templates/nav.html
+++ b/clinic_app/templates/nav.html
@@ -54,6 +54,17 @@
             Клиники
           </a>
         </li>
+          <li>
+          <a href="{{ url_for('index_specialty')}}"
+             class="block py-2 pr-4 pl-3 text-gray-700 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">
+            Специальности
+          </a>
+          <li>
+          <a href="{{ url_for('index_appointments')}}"
+             class="block py-2 pr-4 pl-3 text-gray-700 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">
+            Appointments
+          </a>
+        </li>
 
         <li>
           <a href="{{ url_for('index_doctors')}}"
