--- a/clinic_app/templates/patient_detail.html
+++ b/clinic_app/templates/patient_detail.html
@@ -18,18 +18,21 @@
              </div>
         </div>
 
-    <br>
-    <hr>
-    <h1 class="font-bold text-2xl">Все приемы:</h1>
+    <button class="mt-6 py-4 px-6 rounded-xl text-white bg-blue-500 hover:bg-blue-700">
+        <a href="{{ url_for('update_patient', id=patient.id )}}">Изменить данные пациента</a></button>
+    <button class="mt-6 py-4 px-6 rounded-xl text-white bg-red-500 hover:bg-red-700">
+        <a href="{{ url_for('del_patient', id=patient.id)}}">Удалить</a></button>
+
+
+    <h1 class="mt-6 font-bold text-2xl">Все приемы:</h1>
     <div class="information w-full py-6 px-6 lg:p-6">
     {% for appointment in appointments %}
         <li>{{ appointment }}</li>
     {% endfor %}
     </div>
 
-    <br>
-    <hr>
-    <h1 class="font-bold text-2xl">Все отзывы написанные мной:</h1>
+
+    <h1 class="mt-6 font-bold text-2xl">Все отзывы написанные мной:</h1>
     <div class="information w-full py-6 px-6 lg:p-6">
     {% for comm in comments %}
         <li>{{ comm }}</li>
