--- a/clinic_app/templates/patients.html
+++ b/clinic_app/templates/patients.html
@@ -13,4 +13,7 @@
                 {% endfor %}
         </div>
 </div>
+<button class="mt-6 py-4 px-6 rounded-xl text-white bg-green-500 hover:bg-green-700">
+    <a href="{{ url_for('add_patient')}}">Добавить нового пациента</a>
+</button>
 {% endblock %}
