--- a/clinic_app/templates/base.html
+++ b/clinic_app/templates/base.html
@@ -30,5 +30,28 @@
         {% block content %}
         {% endblock %}
     </div>
+<footer class="bg-gray-100">
+            <div class="max-w-6xl mx-auto py-10 px-6 xl:px-0 md:flex justify-between">
+                <div class="footer-left mb-12 md:mb-0">
+                    <h2 class="mb-5 font-extrabold uppercase text-lg">Table tennis shop</h2>
+                    <p class="text-gray-700 font-bold">
+                        Создаем сайты на заказ так, чтобы сохранить ваш бюджет, похвастаться партнерам
+                        и получить клиентов.
+                        В будущем компании не придется нанимать людей для доработки и правок.
+                        Это позволит сократить расходы на содержание сайта: по нашим оценкам на 72%
+                        Вы можете оформить заказ на сайте, или обратившись к нам по
+                        телефону ( +7 961 636 .... ) или e-mail ( askvart@yahoo.com ) </p>
+                </div>
+                <div class="footer-right">
+                    <h2 class="mb-5 font-extrabold uppercase text-lg">Социальные сети</h2>
+
+                    <div class="social-icons">
+                        <a target="_blank" class="dribbble" href="https://t.me/ttennisshop"><i class="fa fa-telegram"></i></a>
+                        <a target="_blank" class="dribbble" href=""><i class="fa fa-camera-retro fa-lg"></i></a>
+                    </div>
+                </div>
+            </div>
+        </footer>
+
 </body>
 </html>
