--- a/clinic_app/templates/new_appointment.html
+++ b/clinic_app/templates/new_appointment.html
@@ -7,7 +7,7 @@
 {% endfor%}
 <div class="max-w-lg mx-auto flex flex-wrap p-6">
     <div class="w-full bg-gray-100 p-6 rounded-xl">
-        <h1 class="mb-6 text-2xl">Добавление нового приема врача</h1>
+        <h1 class="mb-6 text-2xl">@@@Добавление нового приема врача</h1>
         <form class="space-y-3" method="post">
             <div class="mb-4">
         {{ form.csrf_token }}
